--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -7,10 +7,16 @@
   <body>
     <h1>Sign Up</h1>
     <form action="/sign-up" method="POST">
-      <label for="username">Username</label>
-      <input id="username" name="username" placeholder="username" type="text" />
+      <label for="firstName">First name</label>
+      <input type="text" name="firstName" id="firstName" />
+      <label for="lastName">Last name</label>
+      <input type="text" name="lastName" id="lastName" />
+      <label for="email">Email</label>
+      <input id="email" name="email" type="email" />
       <label for="password">Password</label>
       <input id="password" name="password" type="password" />
+      <label for="confirmPassword">Confirm password</label>
+      <input id="confirmPassword" name="confirmPassword" type="password" />
       <button type="submit">Sign Up</button>
     </form>
   </body>
