Add form validation error display when signing up

--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -19,5 +19,6 @@
       <input id="confirmPassword" name="confirmPassword" type="password" />
       <button type="submit">Sign Up</button>
     </form>
+    <%- include("partials/errors.ejs") %>
   </body>
 </html>
