--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
     <% } else { %>
     <h1>Log in</h1>
     <form action="/log-in" method="POST">
-      <label for="username">Username</label>
-      <input id="username" name="username" placeholder="username" type="text" />
+      <label for="username">Email</label>
+      <input id="username" name="username" type="text" />
       <label for="password">Password</label>
       <input id="password" name="password" type="password" />
       <button type="submit">Log In</button>
