--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,30 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Log In</title>
+    <title>Members only</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <% if (locals.user) {%>
-    <h1>Welcome back <%= `${user.first_name} ${user.last_name}` %></h1>
-    <a href="/log-out">Log out</a>
-    <% } else { %>
-    <h1>Log in</h1>
-    <form action="/log-in" method="POST">
-      <label for="username">Email</label>
-      <input id="username" name="username" type="text" />
-      <label for="password">Password</label>
-      <input id="password" name="password" type="password" />
-      <button type="submit">Log In</button>
-    </form>
-    <% if (locals.errors) {%>
-    <ul>
-      <% errors.forEach(function(error) { %>
-      <li><%= error%></li>
-      <% }); %>
-    </ul>
-    <% } %>
-
-    <a href="/sign-up">Sign up</a>
-    <%}%>
+    Members only
+    <main>
+      <% if(locals.user) { %>
+      <form action="/post">
+        <label for="postContent">What's on your mind?</label>
+        <textarea
+          name="postContent"
+          id="postContent"
+          maxlength="280"
+        ></textarea>
+        <button type="submit">Post</button>
+      </form>
+      <%} else {%>
+      <a href="/log-in">Log in</a>
+      <%}%> <% posts.forEach(function(post) { %>
+      <article><%= post%></article>
+    </main>
   </body>
 </html>
