--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Liter&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 *,
 *::before,
 *::after {
@@ -36,4 +37,104 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
+}
+
+:root {
+  --accents: rgb(56, 179, 122);
+}
+
+body {
+  background-color: rgb(32, 32, 32);
+  color: white;
+  font-family: "Roboto";
+  margin: 0;
+  font-size: 1rem;
+}
+
+main {
+  padding: 2em;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  background-color: var(--accents);
+  font-size: 1.2rem;
+}
+
+.wrapper {
+  min-height: 100dvh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: minmax(0, 1fr);
+}
+
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1em;
+  background-color: var(--accents);
+  height: 4rem;
+  font-size: 1.3rem;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.posts {
+  display: grid;
+  grid-template-rows: auto;
+  gap: 1rem;
+  justify-content: center;
+  gap: 1em;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border: 3px solid white;
+  border-radius: 20px;
+  box-shadow: 0px 0px 16px 4px black;
+  padding: 1em;
+  word-break: break-word;
+  width: 68ch;
+  font-size: 1.1rem;
+}
+
+textarea {
+  border: 3px solid rgb(255, 255, 255);
+  border-radius: 5px;
+  background-color: transparent;
+  height: 10.5rem;
+  padding: 0.5em;
+  color: white;
+  resize: none;
+}
+
+.post-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.post-form button {
+  border: 3px solid var(--accents);
+  border-radius: 5px;
+  color: white;
+  background-color: transparent;
+  transition: border-color 300ms ease-in-out;
+}
+
+.post-form button:hover {
+  border-color: aqua;
 }
