--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,8 @@
     <a href="/"><h1>Members Only</h1></a>
     <%if(!locals.user.member) { %>
     <a href="get-membership">Get membership</a>
+    <%} %> <%if(locals.user.member )if(!locals.user.admin) { %>
+    <a href="get-admin">Get admin privileges</a>
     <%} %>
     <a href="/log-out">Log out</a>
   </nav>
