--- a/views/get-membership.ejs
+++ b/views/get-membership.ejs
@@ -2,27 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Log In</title>
+    <title>Get membership</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div class="wrapper">
       <%- include('header') %>
-      <main>
+      <main class="user-form-main">
         <% if (locals.user.member) {%>
         <h1>
           <%= `You already are a member, ${user.first_name} ${user.last_name}.`
           %>
         </h1>
         <% } else { %>
-
-        <form action="/get-membership" method="POST">
-          <label for="passcode"
-            ><h1>Enter the secret passcode to become a member</h1></label
-          >
-          <input id="passcode" name="passcode" type="password" required />
-          <button type="submit">Submit</button>
-        </form>
+        <div class="user-form-wrapper">
+          <form action="/get-membership" method="POST" class="user-form">
+            <label for="passcode"
+              ><h1>Enter the passcode to become a member</h1></label
+            >
+            <input id="passcode" name="passcode" type="password" required />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
         <%- include("partials/errors.ejs") %> <% }%>
       </main>
       <%- include('footer') %>
