--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -4,22 +4,25 @@
     <meta charset="UTF-8" />
     <title>Sign Up</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div class="wrapper">
       <%- include('header') %>
-      <main>
+      <main class="user-form-main">
         <h1>Sign Up</h1>
-        <form action="/sign-up" method="POST">
-          <label for="firstName">First name</label>
+        <form action="/sign-up" method="POST" class="user-form">
+          <label for="firstName">First name <span class="req">*</span></label>
           <input type="text" name="firstName" id="firstName" required />
-          <label for="lastName">Last name</label>
+          <label for="lastName">Last name <span class="req">*</span></label>
           <input type="text" name="lastName" id="lastName" required />
-          <label for="email">Email</label>
+          <label for="email">Email <span class="req">*</span></label>
           <input id="email" name="email" type="email" required />
-          <label for="password">Password</label>
+          <label for="password">Password <span class="req">*</span></label>
           <input id="password" name="password" type="password" required />
-          <label for="confirmPassword">Confirm password</label>
+          <label for="confirmPassword"
+            >Confirm password<span class="req">*</span></label
+          >
           <input
             id="confirmPassword"
             name="confirmPassword"
